# innovation-hack

./: .gitignore  CONTRIBUTING.md  GEMINI.md  README.md  add_integers.py  divide_by_three.py  example_usage.py  llm_addition.py  neural_network.py  pyproject.toml  simple_neural_network.py  test_division.py
apps/api/: .env.example  auth.py  database.py  main.py  requirements.txt  store.py
apps/api/migrations/: 001_greenledger_schema.sql  001_initial.sql  002_add_routing_fields.sql  002_seed_model_benchmarks.sql
apps/api/models/: schemas.py
apps/api/routes/: infer.py  models.py  orgs.py  pay.py  receipts.py  scores.py  wallets.py
apps/api/services/: __init__.py  base.py  keystore.py  providers.py  streaming.py
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/admin/dashboard/: layout.tsx  page.tsx
apps/web/app/admin/dashboard/activity/: page.tsx
apps/web/app/admin/dashboard/carbon/: page.tsx
apps/web/app/admin/dashboard/clients/: page.tsx
apps/web/app/admin/dashboard/orgs/: page.tsx
apps/web/app/admin/dashboard/routing/: page.tsx
apps/web/app/api/auth/[auth0]/: route.ts
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/dashboard/agents/: page.tsx
apps/web/app/dashboard/agents/[id]/: page.tsx
apps/web/app/dashboard/cli/: page.tsx
apps/web/app/dashboard/levy/: page.tsx
apps/web/app/dashboard/receipts/: page.tsx
apps/web/app/dashboard/router/: page.tsx
apps/web/app/dashboard/wallets/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: ActivityTable.tsx  AdminSidebar.tsx  ComparisonPanel.tsx  EmissionsChart.tsx  ImpactStory.tsx  LiveFeed.tsx  ModelMatrix.tsx  ModelPieChart.tsx  RecommendationCard.tsx  RoutingPipeline.tsx  Sidebar.tsx  StatCard.tsx  SustainabilityGauge.tsx
apps/web/context/: AuthContext.tsx  ThemeContext.tsx
apps/web/lib/: admin-mock-data.ts  api-client.ts  dummy-agents.ts  greenledger-api.ts  mock-data.ts
cli/: README.md  config.py  launch.py  main.py  renderer.py  tools.py
cli/models/: registry.py
cli/utils/: carbon.py
docs/: ARCHITECTURE.md  CLI-DEEP-DIVE.md  CLI-PRODUCT-WORKFLOW.md  CLI-TASK-BREAKDOWN.md  GREEN-ROUTER-DEEP-DIVE.md  GREENLEDGER.md  ROADMAP.md  SERVICE_ARCHITECTURE.md  SERVICE_IMPLEMENTATION_GUIDE.md
docs/.obsidian/: workspace.json
tests/api/: test_infer_endpoint.py  test_keystore.py  test_models_endpoint.py  test_providers.py  test_streaming.py
tests/cli/: test_carbon.py  test_registry.py
