[project]
name = "greenledger"
version = "0.1.2"
description = "Carbon-aware AI inference CLI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
    "cryptography>=42.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.0.0",
    "term-image>=0.7.0",
    "httpx==0.27.0"
]
readme = "cli/README.md"                                                                                                   
license = {text = "MIT"}                                                                                                   
authors = [{name = "Your Name", email = "your@email.com"}]                                                                 
keywords = ["ai", "carbon", "sustainability", "cli", "greenledger"]                                                        
classifiers = [                                                                                                            
      "Programming Language :: Python :: 3",                                                                                 
      "License :: OSI Approved :: MIT License",                                                                              
      "Topic :: Scientific/Engineering",                                                                                     
]                                                                                                                          
                                                                                                                             
[project.urls]                                                                                                             
Homepage = "https://github.com/KashyapHegdeKota/innovation-hack"

[project.scripts]
greenledger = "cli.main:main_entry"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli", "cli.*"]